I did some changes in CSS

--- a/Week2_Mehmet_Sökmen_Homework_CSS/index.html
+++ b/Week2_Mehmet_Sökmen_Homework_CSS/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <!--This page created by Mehmet Sökmen-->
-    <img src="./mehmet_sokmen.jpg" alt="Mehmet Sokmen" id="photo"/>
+    <img src="./images/mehmet_sokmen.jpg" alt="Mehmet Sokmen" id="photo"/>
     <h1>THIS IS MY WEBSITE</h1>
     <div id="header">
         <button onclick="who()">Who am I ?</button>
@@ -27,13 +27,12 @@
         I am an experienced Mathematics and Physics teacher.
         I worked as a teacher 5 years in Turkey, 1 year in Sudan, 3 years in Iraq . 
     </p>
-    <a href="https://github.com/sokmen4083">Click to My GitHub <img id="github" src="./GitHub-Logo.png" alt="GitHub Logo"/></a>
+    <a href="https://github.com/sokmen4083">Click to My GitHub <img id="github" src="./images/GitHub-Logo.png" alt="GitHub Logo"/></a>
     </br>
-    <a href="https://www.linkedin.com/in/mehmet-s%C3%B6kmen-0b34851b8/">Click to My Linkedin<img id="linkedin" src="./linkedin-logo.png" alt="Linkedin Logo"/></a>
+    <a href="https://www.linkedin.com/in/mehmet-s%C3%B6kmen-0b34851b8/">Click to My Linkedin<img id="linkedin" src="./images/linkedin-logo.png" alt="Linkedin Logo"/></a>
     </div>
     <div id="about">
-    <h2>About Me</h2>
-    <h4>My Schools</h4>
+    <h2>My Schools</h2>
     <ol>
         <li><a href="https://kibrisilkokulu.meb.k12.tr/">Kibris Primary School(in Turkey)</a></li>
         <li><a href="https://kibrisortaokulu.meb.k12.tr/">Kibris Secondary School(in Turkey)</a></li>
@@ -66,20 +65,20 @@
 </div>
 <div id="hobby">
     <h2>My Hobbies</h2>
-    <ul>
-        <li>Playing Football</li>
-        <li>Listening Music</li>
-        <li>Reading Book</li>
-        <li>Cooking</li>
-        <li>Eating</li>
-        <li>Coding</li>
+    <ul >
+        <li><a href="./hobbies/football.html"> Playing Football <img class="icon" src="./images/football.png"></a></li>
+        <li><a href="./hobbies/music.html">Listening Music <img class="icon" src="./images/listen.png"></a></li>
+        <li><a href="./hobbies/book.html">Reading Book <img class="icon" src="./images/reading.png"></a></li>
+        <li><a href="./hobbies/cooking.html">Cooking <img class="icon" src="./images/cooking.png"></a></li>
+        <li><a href="./hobbies/eating.html">Eating <img class="icon" src="./images/eating.png"></a></li>
+        <li><a href="./hobbies/coding.html">Coding <img class="icon" src="./images/coding.png"></a></li>
     </ul>
 </li>
 </div>
 <div id="video">
 <h2>About of Switzerland</h2>
 <video  width="360" height="320"controls>
-    <source src="Top 10 Places To Visit In Switzerland.mp4" type="video/mp4">
+    <source src="./video/Top 10 Places To Visit In Switzerland.mp4" type="video/mp4">
 </video>
 <div id="switzerland">Top 10 Places To Visit In Switzerland</div>
 </div>
@@ -87,5 +86,6 @@
 </div>
     
      <script src="./app.js"></script>
+     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
